# apertium-isl-eng

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile.am  README  README.md  apertium-is-en.en.dix  apertium-is-en.is-en.dix  apertium-is-en.is-en.lex  apertium-is-en.is-en.rlx  apertium-is-en.is-en.t0x  apertium-is-en.is-en.t1x  apertium-is-en.is-en.t2x  apertium-is-en.is-en.t3x  apertium-is-en.is-en.t4x  apertium-is-en.is.dix  apertium-is-en.is.tsx  apertium-is-en.post-en.dix  apertium-is-en.trules-is-en.xml  apertium-isl-eng.eng.dix  apertium-isl-eng.isl-eng.dix  apertium-isl-eng.isl-eng.lrx  apertium-isl-eng.isl-eng.t2x  apertium-isl-eng.isl-eng.t3x  apertium-isl-eng.isl.tsx  apertiumIceNLP.sh  configure.ac  demo.sh  detailedDemo.sh  icenlpApertium.sh  icetaggerApertium.sh  icetaggerClientApertium.sh  is-en.prob  modes.xml  pending-tests.sh  pipeline.sh  pipelineApertium.sh  pipelineIce.sh  (+7 more)
dev/: NOTES  adv3.OUT.sorted  apertiumtag-to-visl.cg3  example.dix  icetagger.ruleset  inconsistency-summary.sh  inconsistency.sh  is-en.freelang.xml  is-en.interwiki.xml  is-en.wiktionary.xml  is-isen-missing-list  is-isen-missing-list.sh  is-tags.mapping.txt  is_en.txt  mánuðir  newResults.txt.adverbs.xml  newResults.txt.interj.xml  newResults.txt.leftovers  newResults.txt.num.xml  newResults.txt.preps.xml  nouns3.OUT.sorted  phrases-draft1.txt  results.txt.adj  results.txt.adj.xml  results.txt.leftovers  results.txt.nouns.xml  results.txt.verbs.xml  run-testvoc.sh  testvoc-summary.txt  verbs3.OUT.sorted
dev/data/: adj3.OUT.sorted  apertium-is-en.is-en.dix.sorted  is-en.interwiki.xml  is.wordlist.txt  newResults.txt.conj.xml  newResults.txt.interj.xml  newResults.txt.leftovers  newResults.txt.num.xml  newResults.txt.preps.xml  oblique.txt  results.txt.adj.xml  results.txt.verbs.xml  snara.adj.final.xml  snara.adv.final.xml  snara.british.nouns  snara.invalid.txt  snara.isen.wordlist.txt  snara.nouns.final.xml  snara.uk.open  snara.untranslated.nouns  snara.us.open.xml  snara.verbs.final.xml
dev/eval/: eval.2010-03.txt  eval.2010-05.apertium.txt  eval.2010-05.google.txt  eval.2010-05.icenlp.txt  eval.2010-05.tungutorg.txt
dev/sorting/: bidixSort.sh  howto_run_bidixSort_recursively.txt
dev/sorting/temp_sorting/: abbrev.xml  abbrev.xml.pseudo  abbrev.xml.sorted  adj.xml  adj.xml.pseudo  adj.xml.restored  adj.xml.sorted  adv.xml  adv.xml.pseudo  adv.xml.restored  adv.xml.sorted  cnjsub.xml  cnjsub.xml.pseudo  cnjsub.xml.restored  cnjsub.xml.sorted  ij.xml  ij.xml.pseudo  ij.xml.restored  ij.xml.sorted  np_ant.xml  np_ant.xml.pseudo  np_ant.xml.restored  np_top.xml  np_top.xml.pseudo  np_top.xml.restored  prep.xml  prep.xml.pseudo  prep.xml.restored  prep.xml.sorted  vblex.xml  vblex.xml.pseudo  vblex.xml.restored  vblex.xml.sorted
test/: isl-eng-pending-chunker-expected.txt  isl-eng-pending-chunker2-expected.txt  isl-eng-pending-disam-expected.txt  isl-eng-pending-disam2-expected.txt  isl-eng-pending-generator-expected.txt  isl-eng-pending-input.txt  isl-eng-pending-interchunk2-expected.txt  isl-eng-pending-morph-expected.txt  isl-eng-pending-postchunk-expected.txt  isl-eng-pending-postgen-expected.txt  isl-eng-pending-postgen-gold.txt  isl-eng-pending-tagger-expected.txt  isl-eng-regression-chunker-expected.txt  isl-eng-regression-disam-expected.txt  isl-eng-regression-generator-expected.txt  isl-eng-regression-input.txt  isl-eng-regression-interchunk-expected.txt  isl-eng-regression-interchunk2-expected.txt  isl-eng-regression-morph-expected.txt  isl-eng-regression-postchunk-expected.txt  isl-eng-regression-postgen-expected.txt  isl-eng-regression-postgen-gold.txt  isl-eng-regression-pretransfer-expected.txt  isl-eng-regression-tagger-expected.txt  tests.json
